tests/whiley/invalid/test_32.wyal
assert "negative length possible":
    forall(int n):
        if:
            true
        then:
            n >= 0


